# docs/swagger.json
@@ -931,7 +931,7 @@
                 }
             }
         },
-        "/orders/{id}/carts/add": {
+        "/orders/{id}/carts/add/{cartID}": {
             "put": {
                 "description": "Add a cart to an existing order by IDs",
                 "consumes": [
@@ -982,7 +982,7 @@
                 }
             }
         },
-        "/orders/{id}/carts/remove": {
+        "/orders/{id}/carts/remove/{cartID}": {
             "put": {
                 "description": "Remove a cart from an existing order by IDs",
                 "consumes": [
