# routes/order_routes.go
@@ -48,8 +48,8 @@ func RegisterOrderRoutes(config *configs.Config, router *mux.Router, db *mongo.D
 	router.Handle(RouteOrders+"/all", authMiddleware(http.HandlerFunc(orderHandler.ReadAll))).Methods("GET")
 	router.Handle(RouteOrders+"{id}/status", http.HandlerFunc(orderHandler.UpdateOrderStatus)).Methods("PUT")
 	router.Handle(RouteOrders+"{id}/address", http.HandlerFunc(orderHandler.UpdateOrderShippingAddress)).Methods("PUT")
-	router.Handle(RouteOrders+"{id}/carts/add", http.HandlerFunc(orderHandler.AddCartToOrder)).Methods("PUT")
-	router.Handle(RouteOrders+"{id}/items/remove", http.HandlerFunc(orderHandler.RemoveCartFromOrder)).Methods("PUT")
+	router.Handle(RouteOrders+"{id}/carts/add/{cartID}", http.HandlerFunc(orderHandler.AddCartToOrder)).Methods("PUT")
+	router.Handle(RouteOrders+"{id}/items/remove/{cartID}", http.HandlerFunc(orderHandler.RemoveCartFromOrder)).Methods("PUT")
 	router.Handle(RouteOrders+"{id}/confirm", http.HandlerFunc(orderHandler.ConfirmOrder)).Methods("PUT")
 	router.Handle(RouteOrders+"{id}/cancel", http.HandlerFunc(orderHandler.CancelOrder)).Methods("PUT")
 	router.Handle(RouteOrders+"{id}", http.HandlerFunc(orderHandler.Delete)).Methods("DELETE")
